Sockets final corrections